--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - master
 
 env:
   CARGO_INCREMENTAL: 0
@@ -15,14 +15,16 @@ env:
   RUSTUP_MAX_RETRIES: 10
 
 jobs:
-  build_and_test:
-    name: Build and test
-    runs-on: ${{ matrix.os }}
+  test:
+    name: cargo test (${{ matrix.os }})
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-latest]
-        rust: [stable, nightly]
-
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1  
