--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "radix-tree"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Fangdun Tsai <cfddream@gmail.com>"]
 edition = "2018"
 description = "A radix tree implementation for router, path search"
@@ -9,3 +9,6 @@ repository = "https://github.com/viz-rs/radix-tree"
 readme = "README.md"
 keywords = ["radix", "tree", "router", "trek"]
 license = "MIT/Apache-2.0"
+
+[dependencies]
+log = "^0.4.17"
